# magic_quickstart

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parsers.rs
