[package]
name = "magic_quickstart"
version = "0.1.0"
edition = "2021"
description = "A command line app that uses your environment and command history as context for a quick start guide generation in your README"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
humantime = "2.1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rev_lines = "0.3.0"
serde_json = "1.0.138"
